#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-11-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999935 released.

        * More Development on Import/Export Menu Item.


2013-11-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999934 released.

        * Development on Import/Export Menu Item.

        * Added PPI as a module dependency.


2013-10-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999933 released.

        * Happy Halloween!

        * Can now authenticate with keys with sftp (only).

        * Now correctly creating cron strings from Menu.


2013-10-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999932 released.

        * Can now use '..' with ftp cwd().


2013-10-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999931 released.

        * Runs with Perl 5.18 and BerkeleyDB 6.0.

        * Fixed some Solaris installation issues.


2013-10-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999930 released.

        * Can now use '-' and '~' with ftp cwd().

        * Can now use '~' with ftp get() and put().


2013-10-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999929 released.

        * Fixed ftp file locking.


2013-10-05  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999928 released.

        * Fixed bugs found when running with cron.


2013-09-30  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999927 released.

        * Work on Scheduled Jobs continues.

        * Added _homedir to ftp.

