@@ -26,7 +26,7 @@
 
 BEGIN {
 
-$main::VERSION='0.99999935';
+$main::VERSION='0.99999936';
 
 # ASCII BANNER Courtesy of:  http://www.network-science.de/ascii/
 my $fa_banner=<<END;
@@ -767,6 +767,10 @@ END
    ($stdout,$stderr)=&fa_install_module('LWP','install','Makefile');
    print $stdout if $stdout;
    &fa_err_exit($stderr,'LWP') if $stderr;
+   ($stdout,$stderr)=&fa_install_module('Net::SSLeay','install',
+      'Makefile');
+   print $stdout if $stdout;
+   &fa_err_exit($stderr,'Net::SSLeay') if $stderr;
    ($stdout,$stderr)=&fa_install_module('IO::Socket::SSL','install',
       'Makefile');
    print $stdout if $stdout;
@@ -837,7 +841,7 @@ END
       system("cd \"$dir\";./Build install;");
    }
    ($stdout,$stderr)=&fa_install_module('Term::Menus','install','Makefile',
-      '','2.46');
+      '','2.47');
    &fa_err_exit($stderr,'Term::Menus') if $stderr;
    print $stdout if $stdout;
    ($stdout,$stderr)=&fa_install_module('Mozilla::CA','install','Makefile');
@@ -4108,7 +4112,7 @@ requires        'B::Utils'                  => 0;
 #requires        'Data::Dump::Streamer'      => 0;
 requires        'Digest::SHA'               => 0;
 requires        'Digest::MD5'               => 0;
-#requires        'Term::Menus'               => 2.46;
+#requires        'Term::Menus'               => 2.47;
 requires        'Tie::Cache'                => 0;
 requires        'Sort::Versions'            => 0;
 requires        'Crypt::CBC'                => 0;
