@@ -14,16 +14,16 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c4a9b0790795a96c2669eadec59920430fb53031 ChangeLog
+SHA1 67b13005d3518de3ddd0314cb1c87b7310f5f01e ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 13335b8d33ebe10abc86be9bbb675c28d7ba9d2e META.yml
-SHA1 82009dc42a6af8a2948b0ff96a4e0acb9c64cc14 MYMETA.json
-SHA1 8b6aa9de531f9d9d59e35d0267547b303be5bed0 MYMETA.yml
-SHA1 bfd7b77505e5c85694603b420d5b39aa9687cfaf Makefile.PL
+SHA1 920735aa04e6f8e644ce5ddce21f739b591f3b0f META.yml
+SHA1 70797d2ecb00d5ca8af22949a0844d159bb5e0e5 MYMETA.json
+SHA1 c2f9b18a9ff21bd214f06e9003c50610c0b2d6a0 MYMETA.yml
+SHA1 98a6ff816b12ad2823e2e1de1d688af5b06ac086 Makefile.PL
 SHA1 3963e2adaaaf4dabdd2d22748334db30cefedb97 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
-SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
+SHA1 c5096f77f7afdbddd504bb1f7b70e192a0700c4f bin/fullauto.pl
 SHA1 e7597f2c7bab49174bbe597b575bc29f987af7f1 bin/install_mozrepl_plugin.exe
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 c877610fce12aa8c00227ef4164b5bc4b50d429a lib/Net/FullAuto.pm
+SHA1 b0f930f70fec13d91afec984e31b6f2357e47b93 lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 4a590de6e36bf575f58923081e8035d88faa261b lib/Net/FullAuto/FA_Core.pm
+SHA1 ee875e81340167690f5941c8f77b7e2502eb4da3 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJSiEOvAAoJEBa/9Pad787EuGcH/0tlhNVxKHyg/HeWta6RcU13
-tOuXVi7nxZeIxk0J/mDoLtOwTgP50ji86C7iMAxXNx7AWfi9GFaTKhIiY/atgnkb
-SOXjql8PH6wh1vOtcK6fP/KBCasmOYE0W5ha/iIIbK4CQA0PVULTU/vyoBIHaWZE
-CrkcAHJyr/t6h47Udu6fAeVn03vM5msocJ3SPZJo4er5DGzN0WHMQTyRsljsObOX
-s7oH8XEpfN+GqTJbUffUCvkS4yVqQJ+/tgRW8DVjTvU0TVs3eaJDUcKNofoBG1AS
-CfvVS3HVNdgMbqI1jS/nd24nhCe+Z3IseQsYnglLyAIj8kbEStrsZZd1kQ6ckxs=
-=UHrT
+iQEcBAEBAgAGBQJSi2WUAAoJEBa/9Pad787EYpwH+wWneaIPoaMCQuYVeeJp2eOV
+n7nM8MRsdyc21ZeR6azUMDAonR6TjJnsta2kIfZWEoEYDhhxG9gzOnYCkUCYow08
+9h6YkoVUER7kaf+f+iTQU89rO2TLFmqbLI9aGUo02F8/MWNvtlFG1eY7JoFIDDq1
+AZ24YW8INGfxfh8kq9eJPvoJ33s6PtoRrarq7k9ljyiOHjUnEiPbnpZ/f/5fqFGy
+DixAF7Z8CWpnPIzWy6fePOi31hlOGMjGXWLY79+SfuLdq8q8XA/Ka4zWgDqxhJAo
+xo/8oaUMvTwLOIqh/2z97NQH1MGz7MobcBkDaZNj0+ZuDfS9BfhGsQOOGrJuiHs=
+=xn6M
 -----END PGP SIGNATURE-----
