@@ -19,6 +19,15 @@
 ################################################################
 
 
+2013-11-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999936 released.
+
+        * More Development on Import/Export Menu Item.
+
+        * Added --users arg to display list of FullAuto users.
+
+
 2013-11-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999935 released.
